--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>我叫彭强，我来自中国！</title>
+    <title>我的第一个blog</title>
 </head>
 <body>
-    
+    我叫彭强，I'm from china
 </body>
 </html>
